<resources>
    <string name="app_name">Lidl-Fotos</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title">Lidl-Fotos</string>
    <string name="nav_header_subtitle">lidl-fotos@picanova.de</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="sure_close_app_question">Are you sure you want to close?</string>
    <string name="sure_close_app_title">Exit!</string>
    <string name="sure_close_app_yes">Yes</string>
    <string name="sure_close_app_no">No</string>
    <string name="title_product_overview">Product Overview</string>
    <string name="menu_help_contact">Help &amp; Contact</string>
    <string name="menu_order_status">Order Status</string>
    <string name="menu_formats_prices">Formats &amp; Prices</string>
    <string name="menu_shipping">Shipping</string>
    <string name="menu_secure_payment">Secure Payment</string>
    <string name="menu_logIn">Log In</string>
    <string name="menu_terms_conditions">Terms and Conditions</string>
    <string name="menu_data_protection">Data Protection</string>
    <string name="url_home">/</string>
    <string name="url_help_contact">/hilfe-kontakt.jsf</string>
    <string name="url_order_status">/bestellstatus.jsf</string>
    <string name="url_formats_prices">/formate-und-preise.jsf</string>
    <string name="url_shipping">/zahlung-und-versand.jsf</string>
    <string name="url_secure_payment">/zahlung.jsf</string>
    <string name="url_logIn">/login.jsf</string>
    <string name="url_terms_conditions">/agb/impressum.jsf</string>
    <string name="url_data_protection">/datenschutz.jsf</string>
    <string name="url_info">/info.jsf</string>
    <string name="cat_fotos">Fotos</string>
    <string name="cat_fotobook">Fotobook</string>
    <string name="cat_fotocalendar">Fotocalendar</string>
    <string name="cat_wallpictures">Wall Picture</string>
    <string name="cat_fotogift">FotoGift</string>
    <string name="cat_photocard">Photo Cards</string>
    <string name="label_loading">Loading...</string>
    <string name="url_fotos">/fotos.jsf</string>
    <string name="url_fotobook">/fotobuecher.jsf</string>
    <string name="url_fotocalendar">/fotokalender.jsf</string>
    <string name="url_wallpicture">/wandbilder.jsf</string>
    <string name="url_fotogift">/fotogeschenke.jsf</string>
    <string name="url_photocards">/fotogrusskarten.jsf</string>
    <string name="url_basket">/shoppingcart.jsf</string>
    <string name="cat_basket">Shoppingcart</string>
    <string name="carCount">0</string>
    <string name="image_chooser">Image Chooser</string>
    <string name="page_not_found">Page not found!</string>
    <string name="not_connected">Not Connected</string>
    <string name="failed_loading">Failed loading...</string>
    <string name="image_file_failed">Image file creation failed</string>
    <string name="cat_configurator">Configurator</string>
    <string name="url_configurator">/configurator.jsf</string>
    <string name="url_basket_en">/shoppingcart.jsf</string>
    <string name="cat_undefined">Discover LIDL online</string>
    <string name="url_fotoabzuge">/fotos/fotoabzuege.jsf</string>
    <string name="url_retroprints">retro-prints.jsf/fotos/retro-prints.jsf</string>
    <string name="url_poster">/fotos/poster.jsf</string>
    <string name="url_fotobook_mini">/fotobuecher/fotobuch-mini-13x19.jsf</string>
    <string name="url_fotobook_small">/fotobuecher/fotobuch-klein-a5.jsf</string>
    <string name="url_fotobook_big">/fotobuecher/fotobuch-gross-a4.jsf</string>
    <string name="url_fotobook_squared_l">/fotobuecher/fotobuch-quadratisch-l-20x20.jsf</string>
    <string name="url_fotobook_suqared_xl">/fotobuecher/fotobuch-quadratisch-xl-30x30.jsf</string>
    <string name="url_fotobook_suqared_xxl">/fotobuecher/fotobuch-xxl-a3.jsf</string>
    <string name="url_wallcalender">/fotokalender/wandkalender-a5.jsf</string>
    <string name="url_wallcalender_squared">/fotokalender/wandkalender-quadratisch.jsf</string>
    <string name="url_wallcalender_kitchen">/fotokalender/kuechenkalender.jsf</string>
    <string name="url_canvas">/wandbilder/foto-leinwand.jsf</string>
    <string name="url_alu_dibond">/wandbilder/foto-alu-dibond.jsf</string>
    <string name="url_acrylglas">/wandbilder/foto-acrylglas.jsf</string>
    <string name="url_forex">/wandbilder/foto-forex-platte.jsf</string>
    <string name="url_galleryprint">/wandbilder/foto-gallery-print.jsf</string>
    <string name="url_acrylblock">/fotogeschenke/foto-acrylbloecke.jsf</string>
    <string name="url_mug">/fotogeschenke/fototassen.jsf</string>
    <string name="url_puzzle">/fotogeschenke/fotopuzzle.jsf</string>
    <string name="url_phonecase">/fotogeschenke/handyhuellen.jsf</string>
    <string name="url_blanket">/fotogeschenke/foto-premiumdecken.jsf</string>
    <string name="url_totbag">/fotogeschenke/foto-stofftasche.jsf</string>
    <string name="url_towel">/fotogeschenke/foto-handtuch.jsf</string>
    <string name="url_mousepad">/fotogeschenke/foto-mousepad.jsf</string>
    <string name="url_grusskarte">/fotogrusskarten/foto-grusskarte.jsf</string>
    <string name="url_klappkarte">/fotogrusskarten/foto-klappkarte.jsf</string>
    <string name="url_postkarte">/fotogrusskarten/foto-postkarte.jsf</string>
    <string name="url_cushion">/fotogeschenke/foto-premiumkissen.jsf</string>
    <string name="cat_fotoabzuge">Fotoabzüge</string>
    <string name="cat_retroprints">Retro-Prints</string>
    <string name="cat_poster">Poster</string>
    <string name="cat_fotobook_mini">Fotobook Mini (13x19 cm)</string>
    <string name="cat_fotobook_small">Fotobook Small (A5)</string>
    <string name="cat_fotobook_big">Fotobook Big (A4)</string>
    <string name="cat_fotobook_squared_l">Fotobook L (20x20 cm)</string>
    <string name="cat_fotobook_squared_xl">Fotobook XL (30x30 cm)</string>
    <string name="cat_fotobook_squared_xxl">Fotobook XXL (A3)</string>
    <string name="cat_wallcalender">Wandkalender</string>
    <string name="cat_wallcalender_squared">Wandkalender quadratisch</string>
    <string name="cat_wallcalender_kitchen">Küchenkalender</string>
    <string name="cat_canvas">Canvas</string>
    <string name="cat_acrylblock">Acrylblöcke</string>
    <string name="cat_mug">Mug</string>
    <string name="cat_puzzle">Puzzle</string>
    <string name="cat_phonecase">PhoneCase</string>
    <string name="cat_blanket">Premiumdecken</string>
    <string name="cat_cushion">Premiumkissen</string>
    <string name="cat_totbag">Totbag</string>
    <string name="cat_towel">Towel</string>
    <string name="cat_mousepad">Mousepad</string>
    <string name="cat_fotocard">Fotogrußkarte</string>
    <string name="cat_foldcard">Foto-Klappkarte</string>
    <string name="cat_postcard">Foto-Postkarte</string>
    <string name="cat_alu_dibond">Alu Dibond</string>
    <string name="cat_acrylglas">Acrylglass</string>
    <string name="cat_forex">Forex</string>
    <string name="cat_galleryprint">Gallery-Print</string>
    <string name="url_address" translatable="false">/orderaddresses.jsf</string>
    <string name="cat_addresses">Addresses</string>
    <string name="cat_payment">Payment</string>
    <string name="url_payment" translatable="false">/paymentmethod.jsf</string>
    <string name="cat_confirmorder">Please check your order</string>
    <string name="url_confirmorder" translatable="false">/confirmorder.jsf</string>
    <string name="domainURL">https://www.lidl-fotos.de</string>
    <string name="domainURL_test">https://testing-lidl-fotos-de.picanova.de</string>
</resources>
