<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:minWidth="40dp"
        android:minHeight="40dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <WebView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/browser"
        android:visibility="gone"
        android:animateLayoutChanges="true"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/List_Categories"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/card_img_fotos"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="14dp"
                android:layout_marginRight="14dp"
                android:layout_marginLeft="14dp"
                app:cardElevation="10dp"
                app:cardCornerRadius="14dp" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/text_fotos"
                        android:layout_width="match_parent"
                        android:layout="@id/text_fotos"
                        android:layout_height="wrap_content"
                        android:background="@color/colorWhite"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:text="@string/cat_fotos"
                        android:textAlignment="center" />

                    <ImageView
                        android:id="@+id/img_fotos"
                        android:layout_below="@id/text_fotos"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/cat_fotos"
                         />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_text_fotobook"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="14dp"
                android:layout_marginRight="14dp"
                android:layout_marginLeft="14dp"
                app:cardElevation="10dp"
                app:cardCornerRadius="14dp" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/text_fotobook"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorWhite"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:text="@string/cat_fotobook"
                        android:textAlignment="center" />

                    <ImageView
                        android:id="@+id/img_fotobook"
                        android:layout_below="@id/text_fotobook"
                        android:layout_width="wrap_content"
                        android:scaleType="centerCrop"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/cat_fotobook"
                         />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_text_fotocalendar"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="14dp"
                android:layout_marginRight="14dp"
                android:layout_marginLeft="14dp"
                app:cardElevation="10dp"
                app:cardCornerRadius="14dp" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/text_fotocalendar"
                        android:background="@color/colorWhite"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:text="@string/cat_fotocalendar"
                        android:textAlignment="center" />

                    <ImageView
                        android:id="@+id/img_fotocalendar"
                        android:layout_below="@id/text_fotocalendar"
                        android:layout_width="wrap_content"
                        android:scaleType="centerCrop"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/cat_fotocalendar"
                        />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_text_wallpicture"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="14dp"
                android:layout_marginRight="14dp"
                android:layout_marginLeft="14dp"
                app:cardElevation="10dp"
                app:cardCornerRadius="14dp" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/text_wallpicture"
                        android:background="@color/colorWhite"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:text="@string/cat_wallpictures"
                        android:textAlignment="center" />

                    <ImageView
                        android:id="@+id/img_wallpicture"
                        android:layout_below="@id/text_wallpicture"
                        android:layout_width="wrap_content"
                        android:scaleType="centerCrop"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/cat_wallpictures"
                        />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_text_fotogift"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="14dp"
                android:layout_marginRight="14dp"
                android:layout_marginLeft="14dp"
                app:cardElevation="10dp"
                app:cardCornerRadius="14dp" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/text_fotogift"
                        android:background="@color/colorWhite"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:text="@string/cat_fotogift"
                        android:textAlignment="center" />

                    <ImageView
                        android:id="@+id/img_fotogift"
                        android:layout_below="@id/text_fotogift"
                        android:layout_width="wrap_content"
                        android:scaleType="centerCrop"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/cat_fotogift"
                        />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_text_photocards"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="14dp"
                android:layout_marginRight="14dp"
                android:layout_marginLeft="14dp"
                app:cardElevation="10dp"
                app:cardCornerRadius="14dp" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/text_photocards"
                        android:background="@color/colorWhite"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:text="@string/cat_photocard"
                        android:textAlignment="center" />

                    <ImageView
                        android:id="@+id/img_photocards"
                        android:layout_below="@id/text_photocards"
                        android:layout_width="wrap_content"
                        android:scaleType="centerCrop"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/cat_photocard"
                        />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/category_recyclerView"
                android:layout_marginStart="5dp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                android:isScrollContainer="false"/>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.constraint.ConstraintLayout>